# allegro_winpkg

./: .gitignore  README.txt
flac-1.3.1/: CMakeLists.txt
freetype-2.5.5/include/config/: ftoption.h
libvorbis-1.3.5/: CMakeLists.txt
mingw-w64/: README.txt
mingw-w64/5.1.9/: PKGBUILD
mingw-w64/git/: PKGBUILD
mingw-w64/release/: PKGBUILD
msvc/: README.txt  build_allegro.bat  build_allegro_32.bat  build_allegro_64.bat  build_deps.bat  build_deps_32.bat  build_deps_64.bat
msvc/dumb-0.9.3/: CMakeLists.txt
msvc/freetype-2.5.5/: CMakeLists.txt
msvc/libjpeg-turbo-1.4.0/: CMakeLists.txt
msvc/libtheora-1.1.1/: CMakeLists.txt
msvc/physfs-2.0.3/: CMakeLists.txt
universal/: Allegro.5.1.12.nuspec  Allegro.nuspec  Allegro.targets  AllegroDeps.nuspec  AllegroDeps.targets  AllegroUI.xml  README_msvc.txt  README_msys.txt  README_nuget.txt  Readme-NuGet.markdown  build_allegro_msvc.bat  build_allegro_msvc2013_32.bat  build_allegro_msvc2013_64.bat  build_allegro_msvc2015_32.bat  build_allegro_msvc2015_64.bat  build_allegro_msvc2022_32.bat  build_allegro_msvc2022_64.bat  build_allegro_msvc_32.bat  build_allegro_msvc_64.bat  build_allegro_msys.sh  build_allegro_msys_32.sh  build_allegro_msys_64.sh  build_deps_msvc.bat  build_deps_msvc2013_32.bat  build_deps_msvc2013_64.bat  build_deps_msvc2015_32.bat  build_deps_msvc2015_64.bat  build_deps_msvc2022_32.bat  build_deps_msvc2022_64.bat  build_deps_msvc_32.bat  build_deps_msvc_64.bat  build_deps_msys.sh  build_deps_msys_32.sh  build_deps_msys_64.sh  build_deps_unix.sh  build_nuget.cmd  create_nuspec.py  freetype-2.9.1.tar.bz2  package_msys.sh
universal/dumb-0.9.3/: CMakeLists.txt
universal/dumb-2.0.3/: CMakeLists.txt
universal/flac-1.3.1/: CMakeLists.txt
universal/flac-1.3.2/: CMakeLists.txt
universal/flac-1.4.3/: CMakeLists.txt
universal/flac-1.4.3/PaxHeaders/: AUTHORS  CHANGELOG.md  CMakeLists.txt  COPYING.FDL  COPYING.GPL  COPYING.LGPL  COPYING.Xiph  Makefile.am  Makefile.in  README.md  aclocal.m4  ar-lib  autogen.sh  cmake  compile  config.cmake.h.in  config.guess  config.h.in  config.rpath  config.sub  configure  configure.ac  depcomp  doc  examples  flac-config.cmake.in  include  install-sh  ltmain.sh  m4  man  microbench  missing  oss-fuzz  src  test
universal/flac-1.4.3/cmake/PaxHeaders/: CheckA64NEON.c.in  CheckA64NEON.cmake  CheckCPUArch.c.in  CheckCPUArch.cmake  FindOgg.cmake  UseSystemExtensions.cmake
universal/flac-1.4.3/doc/PaxHeaders/: CMakeLists.txt  Doxyfile.in  FLAC.tag  Makefile.am  Makefile.in  api  doxygen.footer.html  images  isoflac.txt
universal/flac-1.4.3/doc/api/PaxHeaders/: FLAC_09_09_2export_8h_source.html  FLAC_09_09_2metadata_8h_source.html  FLAC_2all_8h_source.html  (+61 more)
universal/flac-1.4.3/examples/PaxHeaders/: CMakeLists.txt  Makefile.am  Makefile.in  c  cpp
universal/flac-1.4.3/m4/PaxHeaders/: Makefile.am  Makefile.in  add_cflags.m4  add_cxxflags.m4  ax_add_fortify_source.m4  ax_check_compile_flag.m4  ax_check_enable_debug.m4  bswap.m4  clang.m4  codeset.m4  endian.m4  gcc_version.m4  iconv.m4  lib-ld.m4  lib-link.m4  lib-prefix.m4  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  ogg.m4  really_gcc.m4  stack_protect.m4
universal/flac-1.4.3/man/PaxHeaders/: Makefile.am  Makefile.in  flac.1  flac.md  metaflac.1  metaflac.md
universal/flac-1.4.3/microbench/PaxHeaders/: CMakeLists.txt  Makefile.in  benchmark_residual.c  util.c  util.h
universal/flac-1.4.3/oss-fuzz/PaxHeaders/: Makefile.am  Makefile.in  Readme.md  common.h  decoder.cc  empty.cc  encoder.cc  encoder_v2.cc  fuzzer_encoder.dict  fuzzing  metadata.cc  reencoder.cc  seek.cc  tool_flac.c  tool_metaflac.c
universal/flac-1.4.3/src/PaxHeaders/: CMakeLists.txt  Makefile.am  Makefile.in  flac  libFLAC  libFLAC++  metaflac  share  test_libFLAC  test_libFLAC++  test_libs_common  test_seeking  test_streams  utils
universal/flac-1.4.3/src/libFLAC/: CMakeLists.txt
universal/flac-1.4.3/test/PaxHeaders/: CMakeLists.txt  Makefile.am  Makefile.in  common.sh.in  cuesheet.ok  cuesheets  flac-to-flac-metadata-test-files  foreign-metadata-test-files  generate_streams.sh  metaflac-test-files  metaflac.flac.in  metaflac.flac.ok  picture.ok  pictures  test_compression.sh  test_flac.sh  test_libFLAC++.sh  test_libFLAC.sh  test_metaflac.sh  test_replaygain.sh  test_seeking.sh  test_streams.sh  write_iff.pl
universal/freetype-2.13.2/: CMakeLists.txt
universal/freetype-2.5.5/: CMakeLists.txt
universal/freetype-2.8/: CMakeLists.txt
universal/freetype-2.9.1/: CMakeLists.txt
universal/libjpeg-turbo-1.4.0/: CMakeLists.txt
universal/libjpeg-turbo-1.5.2/: CMakeLists.txt
universal/libjpeg-turbo-2.0.1/: CMakeLists.txt
universal/libjpeg-turbo-3.0.0/: CMakeLists.txt
universal/libogg-1.3.2/: CMakeLists.txt
universal/libogg-1.3.3/: CMakeLists.txt
universal/libogg-1.3.5/: CMakeLists.txt
universal/libopenmpt-0.7.11/: CMakeLists.txt
universal/libpng-1.6.17/: CMakeLists.txt
universal/libpng-1.6.30/: CMakeLists.txt
universal/libpng-1.6.36/: CMakeLists.txt
universal/libpng-1.6.40/: CMakeLists.txt
universal/libtheora-1.1.1/: CMakeLists.txt
universal/libvorbis-1.3.5/: CMakeLists.txt
universal/libvorbis-1.3.6/: CMakeLists.txt
universal/libvorbis-1.3.7/: CMakeLists.txt
universal/libvorbis-1.3.7/lib/: CMakeLists.txt
universal/libwebp-1.0.2/: CMakeLists.txt
universal/libwebp-1.0.2/cmake/: deps.cmake
universal/libwebp-1.3.2/: CMakeLists.txt
universal/minimp3/: minimp3_ex.h  minimp3_test.c
universal/opus-1.1.3/: CMakeLists.txt
universal/opus-1.2.1/: CMakeLists.txt  config.h.cmake
universal/opus-1.3/: CMakeLists.txt
universal/opus-1.4/: CMakeLists.txt
universal/opusfile-0.12/: CMakeLists.txt  FindOpus.cmake
universal/opusfile-0.8/: CMakeLists.txt  FindOpus.cmake  Makefile.in  aclocal.m4  configure
universal/physfs-2.0.3/: CMakeLists.txt
universal/physfs-2.0.3/archivers/: lzma.c  zip.c
universal/physfs-3.0.1/: CMakeLists.txt
universal/physfs-3.0.2/: CMakeLists.txt
universal/zlib-1.2.11/: CMakeLists.txt
universal/zlib-1.2.8/: CMakeLists.txt
universal/zlib-1.3/: CMakeLists.txt
(+318 files in other folders)
